syntax = "proto3";
package emmployees;
import "Protos/shared.proto";
option csharp_namespace = "ProtoContracts";

service EmployeesProto {    
    rpc GetAll (EmployeeAllRequest) returns (EmployeeResultMulitpleResponse);
    rpc GetById (EmployeeByIdRequest) returns (EmployeeResultSingleResponse);
    rpc GetByDepartmentId (EmployeeByDepartmentIdRequest) returns (EmployeeResultMulitpleResponse);
    rpc Create (EmployeeCreateRequest) returns (EmployeeResultSingleResponse);
    rpc ChangePersonalData (EmployeeChangePersonalDataRequest) returns (EmployeeResultSingleResponse);
    rpc ChangeDepartment (EmployeeChangeDepartmentRequest) returns (EmployeeResultSingleResponse);
    rpc Delete (EmployeeDeleteRequest) returns (EmployeeResultEmptyResponse);
  }

  //requests
  message EmployeeAllRequest {}

  message EmployeeByIdRequest{
    string id = 1;
  }

   message EmployeeByDepartmentIdRequest{
    string id = 1;
  }

  message EmployeeCreateRequest{
      string lastname = 1;
      string firstname = 2;
      string department_id = 3;
  }

  message EmployeeChangePersonalDataRequest{
    string id = 1;
    string new_lastname = 2;
    string new_firstname = 3;
  }

  message EmployeeChangeDepartmentRequest{
    string id = 1;
    string new_department_id = 2;
  } 

  message EmployeeDeleteRequest{
    string id = 1;
  }

  //responses
  message EmployeeResultSingleResponse{
      bool isSucces = 1;
      shared.ErrorModel error = 2;
      EmployeeModel employee = 3;
  }

  message EmployeeResultMulitpleResponse{
      bool isSucces = 1;
      shared.ErrorModel error = 2;
      repeated EmployeeModel employees = 3;
  }

  message EmployeeResultEmptyResponse{
      bool isSucces = 1;
      shared.ErrorModel error = 2;
  }

  // models
    message EmployeeModel{
    string id = 1;
    string lastname = 2;
    string firstname = 3;
    string department_id = 4;
  }